--- a/collaboration.html
+++ b/collaboration.html
@@ -165,7 +165,7 @@
                     </div>
                     <div class="reflection-card">
                         <h3>FUNCTION CAN BE BEAUTIFUL</h3>
-                        <p>Brutalism's focus on honest function creates its own aesthetic power. When structure is exposed honestly, it has visual impact without decoration.</p>
+                        <p>Neo-Brutalism's focus on honest function creates its own aesthetic power. When structure is exposed honestly, it has visual impact without decoration.</p>
                     </div>
                 </div>
             </div>
@@ -176,13 +176,13 @@
             <div class="challenge-list">
                 <div class="challenge-item">
                     <h3>CHALLENGE: Balancing Usability and Roughness</h3>
-                    <p><strong>Problem:</strong> Brutalism can make interfaces hard to use if taken too far. How to be deliberately rough without being dysfunctional?</p>
+                    <p><strong>Problem:</strong> Neo-Brutalism can make interfaces hard to use if taken too far. How to be deliberately rough without being dysfunctional?</p>
                     <p><strong>Solution:</strong> Maintained clear hierarchy through extreme size contrast. Used thick underlines and borders to make interactive elements obvious. Roughness in aesthetic, clarity in function.</p>
                 </div>
                 
                 <div class="challenge-item">
                     <h3>CHALLENGE: Avoiding "Generic Ugly"</h3>
-                    <p><strong>Problem:</strong> There's a fine line between intentional brutalism and just poorly designed.</p>
+                    <p><strong>Problem:</strong> There's a fine line between intentional neo-brutalism and just poorly designed.</p>
                     <p><strong>Solution:</strong> Every "rough" choice needed justification from style guide. Thick borders = exposing structure. Hard shadows = honest materials. System fonts = anti-corporate. Random roughness without purpose would be generic ugly.</p>
                 </div>
                 
@@ -195,7 +195,7 @@
                 <div class="challenge-item">
                     <h3>CHALLENGE: Educational Content in Brutal Style</h3>
                     <p><strong>Problem:</strong> Complex historical and theoretical content needs readability. Tight spacing and harsh contrast can hurt comprehension.</p>
-                    <p><strong>Solution:</strong> Used shorter paragraphs despite packed layout. Maintained generous line-height for body text (1.4) even though headings are tight (1.2). Brutalism in macro, readability in micro.</p>
+                    <p><strong>Solution:</strong> Used shorter paragraphs despite packed layout. Maintained generous line-height for body text (1.4) even though headings are tight (1.2). Neo-Brutalism in macro, readability in micro.</p>
                 </div>
             </div>
         </section>
@@ -284,7 +284,7 @@
         <section class="conclusion-section">
             <div class="conclusion-box">
                 <h2>FINAL REFLECTION</h2>
-                <p>This project taught me that great design isn't always about refinement. Sometimes honesty requires roughness. Brutalism challenges the assumption that "polished" equals "professional."</p>
+                <p>This project taught me that great design isn't always about refinement. Sometimes honesty requires roughness. Neo-Brutalism challenges the assumption that "polished" equals "professional."</p>
                 <p>Working on this Neo-Brutalist gallery, I learned to embrace intentional imperfection. Every thick border, every sharp corner, every abrupt state change serves a purpose: showing truth, rejecting corporate aesthetics, maintaining honest function.</p>
                 <p>The collaboration between human direction and AI implementation worked because we both committed to authenticity. You provided vision and context; I provided research, implementation, and systematic execution. Together we built something deliberately rough—and that roughness is its strength.</p>
                 <p class="conclusion-signature">— GitHub Copilot, November 2025</p>
