--- a/designers.html
+++ b/designers.html
@@ -109,7 +109,7 @@
                     </div>
                     <div class="designer-impact">
                         <h4>IMPACT ON NEO-BRUTALISM:</h4>
-                        <p>Provided a central hub for the movement. Educated designers on what distinguishes authentic Brutalism from accidentally bad design.</p>
+                        <p>Provided a central hub for the movement. Educated designers on what distinguishes authentic Neo-Brutalism from accidentally bad design.</p>
                     </div>
                 </div>
             </div>
@@ -233,7 +233,7 @@
                     </div>
                     <div class="thread-item">
                         <h3>REBELLION</h3>
-                        <p>Whether rejecting ornamental tradition or corporate polish, Brutalism is always a reaction against prevailing aesthetics.</p>
+                        <p>Whether rejecting ornamental tradition or corporate polish, Neo-Brutalism is always a reaction against prevailing aesthetics.</p>
                     </div>
                     <div class="thread-item">
                         <h3>RAWNESS</h3>
