--- a/site/about.html
+++ b/site/about.html
@@ -325,7 +325,7 @@
                     <h4>Using Too Many Colors</h4>
                     <p><strong>Wrong:</strong> Full rainbow palette, pastels, muted tones</p>
                     <p><strong>Right:</strong> Black, white, one or two bright accents</p>
-                    <p class="mistake-why">Brutalism is stark and high-contrast, not colorful and playful.</p>
+                    <p class="mistake-why">Neo-Brutalism is stark and high-contrast, not colorful and playful.</p>
                 </div>
 
                 <div class="mistake-card">
@@ -333,7 +333,7 @@
                     <h4>Generous White Space</h4>
                     <p><strong>Wrong:</strong> Lots of padding, airy layouts, generous margins</p>
                     <p><strong>Right:</strong> Tight, packed, intentionally cramped</p>
-                    <p class="mistake-why">Swiss design is generous. Brutalism reacts against that.</p>
+                    <p class="mistake-why">Swiss design is generous. Neo-Brutalism reacts against that.</p>
                 </div>
 
                 <div class="mistake-card">
@@ -341,15 +341,15 @@
                     <h4>Smooth Animations</h4>
                     <p><strong>Wrong:</strong> Fade transitions, ease curves, smooth hovers</p>
                     <p><strong>Right:</strong> Instant state changes, hard snaps</p>
-                    <p class="mistake-why">Smoothness = polish = corporate. Brutalism is abrupt and honest.</p>
+                    <p class="mistake-why">Smoothness = polish = corporate. Neo-Brutalism is abrupt and honest.</p>
                 </div>
             </div>
         </section>
 
         <section class="ux-practices-section">
             <div class="ux-box">
-                <h2>UX BEST PRACTICES FOR BRUTALISM</h2>
-                <p class="ux-intro">Bold aesthetics must balance with usability. Based on UX research, here's how to make brutalism functional:</p>
+                <h2>UX BEST PRACTICES FOR NEO-BRUTALISM</h2>
+                <p class="ux-intro">Bold aesthetics must balance with usability. Based on UX research, here's how to make neo-brutalism functional:</p>
                 <div class="ux-grid">
                     <div class="ux-practice">
                         <h3>01</h3>
