Fix factual errors in Neo-Brutalism content
Mistake #2: Changed 'not colorful and playful' to 'uses bold colors strategically'
- Neo-Brutalism IS colorful (vs pure Brutalism which is minimal)
- Issue was contradiction with rest of content stating Neo-Brutalism embraces color

Spacing comparison: Changed 'Balanced (not too tight)' to 'Strategic (tight but usable)'
- More accurately reflects UX-refined Neo-Brutalism approach
- Acknowledges tight spacing philosophy while maintaining usability

All other facts verified as accurate:
- Historical dates (1953, 1947-1952, 2016)
- Designer names (Le Corbusier, Smithsons, Pascal Deville)
- Brand examples (Figma, Gumroad, Balenciaga, Washington Post)

--- a/about.html
+++ b/about.html
@@ -283,7 +283,7 @@
                     <div class="comparison-row">
                         <div class="comparison-cell"><strong>Spacing</strong></div>
                         <div class="comparison-cell">Generous white space</div>
-                        <div class="comparison-cell">Balanced (not too tight)</div>
+                        <div class="comparison-cell">Strategic (tight but usable)</div>
                     </div>
                     <div class="comparison-row">
                         <div class="comparison-cell"><strong>Typography</strong></div>
@@ -324,8 +324,8 @@
                     <h3>MISTAKE #2</h3>
                     <h4>Using Too Many Colors</h4>
                     <p><strong>Wrong:</strong> Full rainbow palette, pastels, muted tones</p>
-                    <p><strong>Right:</strong> Black, white, one or two bright accents</p>
-                    <p class="mistake-why">Neo-Brutalism is stark and high-contrast, not colorful and playful.</p>
+                    <p><strong>Right:</strong> Black, white, one or two bold primary accents</p>
+                    <p class="mistake-why">Neo-Brutalism uses bold colors strategically—not everything at once. Limit palette for impact.</p>
                 </div>
 
                 <div class="mistake-card">
