--- a/site/about.html
+++ b/site/about.html
@@ -283,7 +283,7 @@
                     <div class="comparison-row">
                         <div class="comparison-cell"><strong>Spacing</strong></div>
                         <div class="comparison-cell">Generous white space</div>
-                        <div class="comparison-cell">Balanced (not too tight)</div>
+                        <div class="comparison-cell">Strategic (tight but usable)</div>
                     </div>
                     <div class="comparison-row">
                         <div class="comparison-cell"><strong>Typography</strong></div>
@@ -324,8 +324,8 @@
                     <h3>MISTAKE #2</h3>
                     <h4>Using Too Many Colors</h4>
                     <p><strong>Wrong:</strong> Full rainbow palette, pastels, muted tones</p>
-                    <p><strong>Right:</strong> Black, white, one or two bright accents</p>
-                    <p class="mistake-why">Neo-Brutalism is stark and high-contrast, not colorful and playful.</p>
+                    <p><strong>Right:</strong> Black, white, one or two bold primary accents</p>
+                    <p class="mistake-why">Neo-Brutalism uses bold colors strategically—not everything at once. Limit palette for impact.</p>
                 </div>
 
                 <div class="mistake-card">
