Simplify color palette to 3 accents - prevent overwhelming users
RATIONALE: Following Nielsen Norman Group UX best practice
- Recommended: 2-3 high-contrast colors maximum
- Previous: 5 accent colors (yellow, pink, blue, green, red)
- New: 3 accent colors (green, yellow, pink)

CHANGES:
- Removed --color-blue (#00CED1) - never used (0 instances)
- Removed --color-red (#FF1744) - barely used (12 instances)
- Replaced all red with pink (#FF69B4)
- Updated COLOR-PALETTE.md with rationale

FINAL PALETTE:
⚫ Black + ⚪ White (base)
🟢 Green (#00FF7F) - 106 uses - primary accent
🟡 Yellow (#FFFF00) - 96 uses - secondary accent
🩷 Pink (#FF69B4) - 94 uses - tertiary accent

Result: Cleaner, less overwhelming, still bold Neo-Brutalist

--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
                             <h4>DO:</h4>
                             <ul>
                                 <li>Use stark black (#000000) and white (#FFFFFF)</li>
-                                <li>Add bright accent colors sparingly (yellow #FFFF00, red #FF1744)</li>
+                                <li>Add bright accent colors sparingly (yellow #FFFF00, red #FF69B4)</li>
                                 <li>Maintain high contrast always</li>
                                 <li>Use pure colors straight from picker</li>
                             </ul>
@@ -576,7 +576,7 @@
         }
 
         .char-dont {
-            background-color: #FF1744;
+            background-color: #FF69B4;
             color: #FFFFFF;
             box-shadow: 10px 10px 0 #000000;
         }
@@ -700,7 +700,7 @@
         }
 
         .mistake-card {
-            background-color: #FF1744;
+            background-color: #FF69B4;
             color: #FFFFFF;
             border: 8px solid #000000;
             padding: 32px;
