--- a/collaboration.html
+++ b/collaboration.html
@@ -360,7 +360,7 @@
         }
 
         .process-phase:nth-child(6) {
-            box-shadow: 16px 16px 0 #FF1744;
+            box-shadow: 16px 16px 0 #FF69B4;
         }
 
         .phase-alt {
@@ -676,7 +676,7 @@
         }
 
         .future-item:nth-child(4) {
-            box-shadow: 10px 10px 0 #FF1744;
+            box-shadow: 10px 10px 0 #FF69B4;
         }
 
         .future-item h4 {
