--- a/history.html
+++ b/history.html
@@ -250,7 +250,7 @@
         }
 
         .timeline-era:nth-child(5) {
-            box-shadow: 16px 16px 0 #FF1744;
+            box-shadow: 16px 16px 0 #FF69B4;
         }
 
         .timeline-era-alt {
