--- a/site/about.html
+++ b/site/about.html
@@ -116,7 +116,7 @@
                             <h4>DO:</h4>
                             <ul>
                                 <li>Use stark black (#000000) and white (#FFFFFF)</li>
-                                <li>Add bright accent colors sparingly (yellow #FFFF00, red #FF1744)</li>
+                                <li>Add bright accent colors sparingly (yellow #FFFF00, red #FF69B4)</li>
                                 <li>Maintain high contrast always</li>
                                 <li>Use pure colors straight from picker</li>
                             </ul>
@@ -576,7 +576,7 @@
         }
 
         .char-dont {
-            background-color: #FF1744;
+            background-color: #FF69B4;
             color: #FFFFFF;
             box-shadow: 10px 10px 0 #000000;
         }
@@ -700,7 +700,7 @@
         }
 
         .mistake-card {
-            background-color: #FF1744;
+            background-color: #FF69B4;
             color: #FFFFFF;
             border: 8px solid #000000;
             padding: 32px;
