Try cyan/turquoise color palette inspired by reference design
Experimenting with color shift based on Neo-Brutalist reference screenshot:
- Green #00FF7F → Cyan/turquoise #00FFB3 (106 instances updated)
- Maintains yellow #FFFF00 and pink #FF69B4
- Creates more modern cyan + yellow + pink combo

PALETTE NOW:
🐬 Cyan (#00FFB3) - primary accent
🟡 Yellow (#FFFF00) - secondary accent
🩷 Pink (#FF69B4) - tertiary accent

This creates a more vibrant, modern Neo-Brutalist look similar to the reference.
Can easily revert if needed.

--- a/collaboration.html
+++ b/collaboration.html
@@ -348,11 +348,11 @@
         }
 
         .process-phase:nth-child(3) {
-            box-shadow: 16px 16px 0 #00FF7F;
+            box-shadow: 16px 16px 0 #00FFB3;
         }
 
         .process-phase:nth-child(4) {
-            box-shadow: 16px 16px 0 #00FF7F;
+            box-shadow: 16px 16px 0 #00FFB3;
         }
 
         .process-phase:nth-child(5) {
@@ -381,7 +381,7 @@
         }
 
         .phase-alt .phase-header {
-            background-color: #00FF7F;
+            background-color: #00FFB3;
         }
 
         .phase-header h3 {
@@ -443,7 +443,7 @@
         }
 
         .reflections-box {
-            background-color: #00FF7F;
+            background-color: #00FFB3;
             border: 12px solid #000000;
             padding: 64px;
             box-shadow: 20px 20px 0 #FF69B4;
@@ -476,11 +476,11 @@
         }
 
         .reflection-card:nth-child(3) {
-            box-shadow: 12px 12px 0 #00FF7F;
+            box-shadow: 12px 12px 0 #00FFB3;
         }
 
         .reflection-card:nth-child(4) {
-            box-shadow: 12px 12px 0 #00FF7F;
+            box-shadow: 12px 12px 0 #00FFB3;
         }
 
         .reflection-card h3 {
@@ -522,11 +522,11 @@
         }
 
         .challenge-item:nth-child(2) {
-            box-shadow: 16px 16px 0 #00FF7F;
+            box-shadow: 16px 16px 0 #00FFB3;
         }
 
         .challenge-item:nth-child(3) {
-            box-shadow: 16px 16px 0 #00FF7F;
+            box-shadow: 16px 16px 0 #00FFB3;
         }
 
         .challenge-item:nth-child(4) {
@@ -562,7 +562,7 @@
         .decisions-box {
             border: 10px solid #000000;
             background-color: #FFFFFF;
-            box-shadow: 16px 16px 0 #00FF7F;
+            box-shadow: 16px 16px 0 #00FFB3;
         }
 
         .decisions-box h2 {
@@ -623,14 +623,14 @@
 
         .decisions-table tbody tr:nth-child(5) td:first-child,
         .decisions-table tbody tr:nth-child(6) td:first-child {
-            background-color: #00FF7F;
+            background-color: #00FFB3;
             color: #000000;
             font-weight: 900;
         }
 
         .decisions-table tbody tr:nth-child(7) td:first-child,
         .decisions-table tbody tr:nth-child(8) td:first-child {
-            background-color: #00FF7F;
+            background-color: #00FFB3;
             font-weight: 900;
         }
 
@@ -664,11 +664,11 @@
             background-color: #FFFFFF;
             border: 8px solid #000000;
             padding: 32px;
-            box-shadow: 10px 10px 0 #00FF7F;
+            box-shadow: 10px 10px 0 #00FFB3;
         }
 
         .future-item:nth-child(2) {
-            box-shadow: 10px 10px 0 #00FF7F;
+            box-shadow: 10px 10px 0 #00FFB3;
         }
 
         .future-item:nth-child(3) {
@@ -705,7 +705,7 @@
             color: #FFFFFF;
             border: 12px solid #FFFF00;
             padding: 64px;
-            box-shadow: 20px 20px 0 #00FF7F;
+            box-shadow: 20px 20px 0 #00FFB3;
         }
 
         .conclusion-box h2 {
