--- a/designers.html
+++ b/designers.html
@@ -295,11 +295,11 @@
         }
 
         .designer-card:nth-child(2) {
-            box-shadow: 16px 16px 0 #00FF7F;
+            box-shadow: 16px 16px 0 #00FFB3;
         }
 
         .designer-card:nth-child(3) {
-            box-shadow: 16px 16px 0 #00FF7F;
+            box-shadow: 16px 16px 0 #00FFB3;
         }
 
         .designer-card:nth-child(4) {
@@ -311,11 +311,11 @@
         }
 
         .designer-card:nth-child(6) {
-            box-shadow: 16px 16px 0 #00FF7F;
+            box-shadow: 16px 16px 0 #00FFB3;
         }
 
         .designer-card:nth-child(7) {
-            box-shadow: 16px 16px 0 #00FF7F;
+            box-shadow: 16px 16px 0 #00FFB3;
         }
 
         .designer-card-alt {
@@ -331,12 +331,12 @@
         }
 
         .designer-card:nth-child(2) .designer-header {
-            background-color: #00FF7F;
+            background-color: #00FFB3;
             color: #000000;
         }
 
         .designer-card:nth-child(3) .designer-header {
-            background-color: #00FF7F;
+            background-color: #00FFB3;
         }
 
         .designer-card:nth-child(5) .designer-header {
@@ -345,7 +345,7 @@
         }
 
         .designer-card:nth-child(7) .designer-header {
-            background-color: #00FF7F;
+            background-color: #00FFB3;
             color: #000000;
         }
 
@@ -433,12 +433,12 @@
         }
 
         .designer-card:nth-child(2) .designer-works li {
-            border-left-color: #00FF7F;
+            border-left-color: #00FFB3;
             background-color: transparent;
         }
 
         .designer-card:nth-child(3) .designer-works li {
-            border-left-color: #00FF7F;
+            border-left-color: #00FFB3;
             background-color: transparent;
         }
 
@@ -451,7 +451,7 @@
         .designer-impact h4 {
             font-size: 22px;
             margin-bottom: 16px;
-            border-bottom: 4px solid #00FF7F;
+            border-bottom: 4px solid #00FFB3;
             padding-bottom: 8px;
         }
 
@@ -467,7 +467,7 @@
         }
 
         .connections-box {
-            background-color: #00FF7F;
+            background-color: #00FFB3;
             border: 12px solid #000000;
             padding: 64px;
             box-shadow: 20px 20px 0 #FFFF00;
@@ -499,11 +499,11 @@
         }
 
         .thread-item:nth-child(3) {
-            box-shadow: 10px 10px 0 #00FF7F;
+            box-shadow: 10px 10px 0 #00FFB3;
         }
 
         .thread-item:nth-child(4) {
-            box-shadow: 10px 10px 0 #00FF7F;
+            box-shadow: 10px 10px 0 #00FFB3;
         }
 
         .thread-item h3 {
