--- a/history.html
+++ b/history.html
@@ -238,11 +238,11 @@
         }
 
         .timeline-era:nth-child(2) {
-            box-shadow: 16px 16px 0 #00FF7F;
+            box-shadow: 16px 16px 0 #00FFB3;
         }
 
         .timeline-era:nth-child(3) {
-            box-shadow: 16px 16px 0 #00FF7F;
+            box-shadow: 16px 16px 0 #00FFB3;
         }
 
         .timeline-era:nth-child(4) {
@@ -271,13 +271,13 @@
         }
 
         .timeline-era-alt .era-header {
-            background-color: #00FF7F;
+            background-color: #00FFB3;
             color: #000000;
             border-bottom-color: #000000;
         }
 
         .timeline-era:nth-child(3) .era-header {
-            background-color: #00FF7F;
+            background-color: #00FFB3;
         }
 
         .timeline-era:nth-child(5) .era-header {
@@ -357,7 +357,7 @@
         }
 
         .philosophy-box {
-            background-color: #00FF7F;
+            background-color: #00FFB3;
             border: 12px solid #000000;
             padding: 64px;
             box-shadow: 20px 20px 0 #FFFF00;
@@ -389,11 +389,11 @@
         }
 
         .principle-item:nth-child(3) {
-            box-shadow: 10px 10px 0 #00FF7F;
+            box-shadow: 10px 10px 0 #00FFB3;
         }
 
         .principle-item:nth-child(4) {
-            box-shadow: 10px 10px 0 #00FF7F;
+            box-shadow: 10px 10px 0 #00FFB3;
         }
 
         .principle-item h3 {
