--- a/about.html
+++ b/about.html
@@ -452,7 +452,7 @@
         }
 
         .philosophy-card:nth-child(2) {
-            box-shadow: 12px 12px 0 #00FF7F;
+            box-shadow: 12px 12px 0 #00FFB3;
         }
 
         .philosophy-card:nth-child(3) {
@@ -460,7 +460,7 @@
         }
 
         .philosophy-card:nth-child(4) {
-            box-shadow: 12px 12px 0 #00FF7F;
+            box-shadow: 12px 12px 0 #00FFB3;
         }
 
         .philosophy-number {
@@ -473,11 +473,11 @@
         }
 
         .philosophy-card:nth-child(2) .philosophy-number {
-            color: #00FF7F;
+            color: #00FFB3;
         }
 
         .philosophy-card:nth-child(3) .philosophy-number {
-            color: #00FF7F;
+            color: #00FFB3;
         }
 
         .philosophy-card:nth-child(4) .philosophy-number {
@@ -535,7 +535,7 @@
         }
 
         .char-section:nth-child(odd) {
-            box-shadow: 16px 16px 0 #00FF7F;
+            box-shadow: 16px 16px 0 #00FFB3;
         }
 
         .char-header {
@@ -545,7 +545,7 @@
         }
 
         .char-section:nth-child(even) .char-header {
-            background-color: #00FF7F;
+            background-color: #00FFB3;
         }
 
         .char-header h3 {
@@ -572,7 +572,7 @@
 
         .char-do {
             background-color: #FFFFFF;
-            box-shadow: 10px 10px 0 #00FF7F;
+            box-shadow: 10px 10px 0 #00FFB3;
         }
 
         .char-dont {
@@ -590,7 +590,7 @@
 
         .char-do h4 {
             color: #000000;
-            border-bottom-color: #00FF7F;
+            border-bottom-color: #00FFB3;
         }
 
         .char-dont h4 {
@@ -606,7 +606,7 @@
         .char-do li, .char-dont li {
             padding: 12px 16px;
             padding-left: 32px;
-            border-left: 8px solid #00FF7F;
+            border-left: 8px solid #00FFB3;
             margin-bottom: 12px;
             font-size: 16px;
             line-height: 1.5;
@@ -624,7 +624,7 @@
         .comparison-box {
             border: 10px solid #000000;
             background-color: #FFFFFF;
-            box-shadow: 16px 16px 0 #00FF7F;
+            box-shadow: 16px 16px 0 #00FFB3;
         }
 
         .comparison-box h2 {
@@ -680,7 +680,7 @@
         }
 
         .comparison-row:nth-child(even) .comparison-cell:first-child {
-            background-color: #00FF7F;
+            background-color: #00FFB3;
         }
 
         .mistakes-section {
@@ -747,7 +747,7 @@
         }
 
         .ux-box {
-            background-color: #00FF7F;
+            background-color: #00FFB3;
             border: 12px solid #000000;
             padding: 64px;
             box-shadow: 20px 20px 0 #FF69B4;
@@ -788,11 +788,11 @@
         }
 
         .ux-practice:nth-child(3) {
-            box-shadow: 10px 10px 0 #00FF7F;
+            box-shadow: 10px 10px 0 #00FFB3;
         }
 
         .ux-practice:nth-child(4) {
-            box-shadow: 10px 10px 0 #00FF7F;
+            box-shadow: 10px 10px 0 #00FFB3;
         }
 
         .ux-practice:nth-child(5) {
@@ -812,11 +812,11 @@
         }
 
         .ux-practice:nth-child(2) h3 {
-            color: #00FF7F;
+            color: #00FFB3;
         }
 
         .ux-practice:nth-child(3) h3 {
-            color: #00FF7F;
+            color: #00FFB3;
         }
 
         .ux-practice:nth-child(4) h3 {
@@ -857,7 +857,7 @@
             background-color: #FFFF00;
             border: 12px solid #000000;
             padding: 64px;
-            box-shadow: 20px 20px 0 #00FF7F;
+            box-shadow: 20px 20px 0 #00FFB3;
         }
 
         .resources-box h2 {
@@ -882,11 +882,11 @@
         }
 
         .resource-category:nth-child(2) {
-            box-shadow: 10px 10px 0 #00FF7F;
+            box-shadow: 10px 10px 0 #00FFB3;
         }
 
         .resource-category:nth-child(3) {
-            box-shadow: 10px 10px 0 #00FF7F;
+            box-shadow: 10px 10px 0 #00FFB3;
         }
 
         .resource-category h3 {
