--- a/site/about.html
+++ b/site/about.html
@@ -116,7 +116,7 @@
                             <h4>DO:</h4>
                             <ul>
                                 <li>Use stark black (#000000) and white (#FFFFFF)</li>
-                                <li>Add bright accent colors sparingly (yellow #FFFF00, red #FF69B4)</li>
+                                <li>Add bright accent colors sparingly (yellow #F7E74F, red #FFB3D9)</li>
                                 <li>Maintain high contrast always</li>
                                 <li>Use pure colors straight from picker</li>
                             </ul>
@@ -419,13 +419,13 @@
 
     <style>
         .philosophy-container {
-            background-color: #FF69B4;
+            background-color: #FFB3D9;
             padding: 80px 48px;
             margin-left: -48px;
             margin-right: -48px;
             border-top: 12px solid #000000;
             border-bottom: 12px solid #000000;
-            box-shadow: 0 16px 0 #FFFF00;
+            box-shadow: 0 16px 0 #F7E74F;
         }
 
         .philosophy-container h2 {
@@ -448,7 +448,7 @@
             background-color: #FFFFFF;
             border: 8px solid #000000;
             padding: 32px;
-            box-shadow: 10px 10px 0 #FFFF00;
+            box-shadow: 10px 10px 0 #F7E74F;
         }
 
         .philosophy-card:nth-child(2) {
@@ -456,7 +456,7 @@
         }
 
         .philosophy-card:nth-child(3) {
-            box-shadow: 12px 12px 0 #FF69B4;
+            box-shadow: 12px 12px 0 #FFB3D9;
         }
 
         .philosophy-card:nth-child(4) {
@@ -466,7 +466,7 @@
         .philosophy-number {
             font-size: 72px;
             font-weight: 900;
-            color: #FF69B4;
+            color: #FFB3D9;
             -webkit-text-stroke: 4px #000000;
             line-height: 1;
             margin-bottom: 16px;
@@ -481,7 +481,7 @@
         }
 
         .philosophy-card:nth-child(4) .philosophy-number {
-            color: #FFFF00;
+            color: #F7E74F;
         }
 
         .philosophy-card h3 {
@@ -506,14 +506,14 @@
         .philosophy-example h4 {
             font-size: 16px;
             margin-bottom: 12px;
-            color: #FF69B4;
+            color: #FFB3D9;
         }
 
         .philosophy-example p {
             font-size: 14px;
             margin-bottom: 6px;
             font-family: 'Courier New', monospace;
-            background-color: #FFFF00;
+            background-color: #F7E74F;
             padding: 8px 12px;
             border: 3px solid #000000;
         }
@@ -531,7 +531,7 @@
         .char-section {
             border: 10px solid #000000;
             margin-bottom: 48px;
-            box-shadow: 16px 16px 0 #FF69B4;
+            box-shadow: 16px 16px 0 #FFB3D9;
         }
 
         .char-section:nth-child(odd) {
@@ -539,7 +539,7 @@
         }
 
         .char-header {
-            background-color: #FFFF00;
+            background-color: #F7E74F;
             padding: 32px 48px;
             border-bottom: 8px solid #000000;
         }
@@ -576,7 +576,7 @@
         }
 
         .char-dont {
-            background-color: #FF69B4;
+            background-color: #FFB3D9;
             color: #FFFFFF;
             box-shadow: 10px 10px 0 #000000;
         }
@@ -628,7 +628,7 @@
         }
 
         .comparison-box h2 {
-            background-color: #FFFF00;
+            background-color: #F7E74F;
             padding: 32px 48px;
             margin: 0;
             border-bottom: 8px solid #000000;
@@ -652,7 +652,7 @@
         }
 
         .comparison-header-row {
-            background-color: #FF69B4;
+            background-color: #FFB3D9;
             color: #000000;
         }
 
@@ -674,7 +674,7 @@
         }
 
         .comparison-cell:first-child {
-            background-color: #FFFF00;
+            background-color: #F7E74F;
             font-weight: 900;
             font-size: 18px;
         }
@@ -700,7 +700,7 @@
         }
 
         .mistake-card {
-            background-color: #FF69B4;
+            background-color: #FFB3D9;
             color: #FFFFFF;
             border: 8px solid #000000;
             padding: 32px;
@@ -712,10 +712,10 @@
         }
 
         .mistake-card h3 {
-            color: #FFFF00;
+            color: #F7E74F;
             font-size: 20px;
             margin-bottom: 12px;
-            border-bottom: 4px solid #FFFF00;
+            border-bottom: 4px solid #F7E74F;
             padding-bottom: 8px;
         }
 
@@ -733,7 +733,7 @@
         .mistake-why {
             margin-top: 20px;
             padding-top: 20px;
-            border-top: 4px solid #FFFF00;
+            border-top: 4px solid #F7E74F;
             font-style: italic;
             font-weight: bold;
         }
@@ -750,7 +750,7 @@
             background-color: #00FFB3;
             border: 12px solid #000000;
             padding: 64px;
-            box-shadow: 20px 20px 0 #FF69B4;
+            box-shadow: 20px 20px 0 #FFB3D9;
         }
 
         .ux-box h2 {
@@ -780,11 +780,11 @@
             background-color: #FFFFFF;
             border: 8px solid #000000;
             padding: 32px;
-            box-shadow: 10px 10px 0 #FFFF00;
+            box-shadow: 10px 10px 0 #F7E74F;
         }
 
         .ux-practice:nth-child(2) {
-            box-shadow: 10px 10px 0 #FF69B4;
+            box-shadow: 10px 10px 0 #FFB3D9;
         }
 
         .ux-practice:nth-child(3) {
@@ -796,16 +796,16 @@
         }
 
         .ux-practice:nth-child(5) {
-            box-shadow: 10px 10px 0 #FFFF00;
+            box-shadow: 10px 10px 0 #F7E74F;
         }
 
         .ux-practice:nth-child(6) {
-            box-shadow: 10px 10px 0 #FF69B4;
+            box-shadow: 10px 10px 0 #FFB3D9;
         }
 
         .ux-practice h3 {
             font-size: 64px;
-            color: #FF69B4;
+            color: #FFB3D9;
             -webkit-text-stroke: 3px #000000;
             margin-bottom: 12px;
             line-height: 1;
@@ -820,14 +820,14 @@
         }
 
         .ux-practice:nth-child(4) h3 {
-            color: #FFFF00;
+            color: #F7E74F;
         }
 
         .ux-practice h4 {
             font-size: 22px;
             margin-bottom: 16px;
             color: #000000;
-            border-bottom: 4px solid #FF69B4;
+            border-bottom: 4px solid #FFB3D9;
             padding-bottom: 12px;
         }
 
@@ -848,13 +848,13 @@
         }
 
         .ux-source a {
-            color: #FFFF00;
+            color: #F7E74F;
             font-weight: 900;
             text-decoration-thickness: 4px;
         }
 
         .resources-box {
-            background-color: #FFFF00;
+            background-color: #F7E74F;
             border: 12px solid #000000;
             padding: 64px;
             box-shadow: 20px 20px 0 #00FFB3;
@@ -878,7 +878,7 @@
             background-color: #FFFFFF;
             border: 6px solid #000000;
             padding: 32px;
-            box-shadow: 10px 10px 0 #FF69B4;
+            box-shadow: 10px 10px 0 #FFB3D9;
         }
 
         .resource-category:nth-child(2) {
@@ -956,7 +956,7 @@
             }
 
             .comparison-row .comparison-cell:first-child {
-                background-color: #FFFF00;
+                background-color: #F7E74F;
                 font-weight: bold;
             }
 
