--- a/site/collaboration.html
+++ b/site/collaboration.html
@@ -87,7 +87,7 @@
                     
                     <h4>Key Design Choices:</h4>
                     <ul>
-                        <li><strong>Colors:</strong> Pure black (#000000) and white (#FFFFFF) with bright yellow (#FFFF00) accent. No gradients, no subtle tones.</li>
+                        <li><strong>Colors:</strong> Pure black (#000000) and white (#FFFFFF) with bright yellow (#F7E74F) accent. No gradients, no subtle tones.</li>
                         <li><strong>Typography:</strong> System fonts only (Arial, Helvetica, Courier). All-caps headings. Tight line-height (1.2-1.3). Extreme size contrast.</li>
                         <li><strong>Borders:</strong> 4-5px thick black borders everywhere. Exposed structure. Sharp 90° angles (no border-radius).</li>
                         <li><strong>Shadows:</strong> Hard, offset box-shadows (8px 8px 0). Not subtle blur—stark and obvious.</li>
@@ -213,7 +213,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Yellow (#FFFF00) accent color</td>
+                            <td>Yellow (#F7E74F) accent color</td>
                             <td>High contrast against black/white. Bright, unrefined, attention-grabbing.</td>
                             <td>"Bright primaries used sparingly for impact"</td>
                         </tr>
@@ -344,7 +344,7 @@
             border: 10px solid #000000;
             background-color: #FFFFFF;
             margin-bottom: 48px;
-            box-shadow: 16px 16px 0 #FF69B4;
+            box-shadow: 16px 16px 0 #FFB3D9;
         }
 
         .process-phase:nth-child(3) {
@@ -356,20 +356,20 @@
         }
 
         .process-phase:nth-child(5) {
-            box-shadow: 16px 16px 0 #FFFF00;
+            box-shadow: 16px 16px 0 #F7E74F;
         }
 
         .process-phase:nth-child(6) {
-            box-shadow: 16px 16px 0 #FF69B4;
+            box-shadow: 16px 16px 0 #FFB3D9;
         }
 
         .phase-alt {
-            background-color: #FF69B4;
+            background-color: #FFB3D9;
             color: #000000;
         }
 
         .phase-header {
-            background-color: #FFFF00;
+            background-color: #F7E74F;
             color: #000000;
             padding: 32px 48px;
             border-bottom: 8px solid #000000;
@@ -396,9 +396,9 @@
             font-weight: 900;
             padding: 12px 24px;
             background-color: #000000;
-            color: #FFFF00;
+            color: #F7E74F;
             border: 6px solid #000000;
-            box-shadow: 6px 6px 0 #FF69B4;
+            box-shadow: 6px 6px 0 #FFB3D9;
         }
 
         .phase-content {
@@ -410,11 +410,11 @@
             font-size: 28px;
             margin: 32px 0 16px 0;
             font-weight: 900;
-            background-color: #FFFF00;
+            background-color: #F7E74F;
             display: inline-block;
             padding: 8px 16px;
             border: 4px solid #000000;
-            box-shadow: 4px 4px 0 #FF69B4;
+            box-shadow: 4px 4px 0 #FFB3D9;
         }
 
         .phase-content p {
@@ -431,7 +431,7 @@
 
         .phase-content li {
             padding: 12px 0 12px 32px;
-            border-left: 8px solid #FFFF00;
+            border-left: 8px solid #F7E74F;
             margin-bottom: 12px;
             font-size: 18px;
             line-height: 1.6;
@@ -446,7 +446,7 @@
             background-color: #00FFB3;
             border: 12px solid #000000;
             padding: 64px;
-            box-shadow: 20px 20px 0 #FF69B4;
+            box-shadow: 20px 20px 0 #FFB3D9;
         }
 
         .reflections-box h2 {
@@ -468,11 +468,11 @@
             background-color: #FFFFFF;
             border: 8px solid #000000;
             padding: 32px;
-            box-shadow: 12px 12px 0 #FFFF00;
+            box-shadow: 12px 12px 0 #F7E74F;
         }
 
         .reflection-card:nth-child(2) {
-            box-shadow: 12px 12px 0 #FF69B4;
+            box-shadow: 12px 12px 0 #FFB3D9;
         }
 
         .reflection-card:nth-child(3) {
@@ -487,7 +487,7 @@
             font-size: 24px;
             margin-bottom: 20px;
             font-weight: 900;
-            border-bottom: 6px solid #FFFF00;
+            border-bottom: 6px solid #F7E74F;
             padding-bottom: 8px;
         }
 
@@ -518,7 +518,7 @@
             border: 10px solid #000000;
             padding: 48px;
             background-color: #FFFFFF;
-            box-shadow: 16px 16px 0 #FF69B4;
+            box-shadow: 16px 16px 0 #FFB3D9;
         }
 
         .challenge-item:nth-child(2) {
@@ -530,18 +530,18 @@
         }
 
         .challenge-item:nth-child(4) {
-            box-shadow: 16px 16px 0 #FFFF00;
+            box-shadow: 16px 16px 0 #F7E74F;
         }
 
         .challenge-item h3 {
             font-size: 28px;
             margin-bottom: 24px;
             color: #000000;
-            background-color: #FFFF00;
+            background-color: #F7E74F;
             display: inline-block;
             padding: 12px 24px;
             border: 6px solid #000000;
-            box-shadow: 6px 6px 0 #FF69B4;
+            box-shadow: 6px 6px 0 #FFB3D9;
             font-weight: 900;
         }
 
@@ -566,7 +566,7 @@
         }
 
         .decisions-box h2 {
-            background-color: #FF69B4;
+            background-color: #FFB3D9;
             color: #000000;
             padding: 32px 48px;
             margin: 0;
@@ -610,13 +610,13 @@
 
         .decisions-table tbody tr:nth-child(1) td:first-child,
         .decisions-table tbody tr:nth-child(2) td:first-child {
-            background-color: #FFFF00;
+            background-color: #F7E74F;
             font-weight: 900;
         }
 
         .decisions-table tbody tr:nth-child(3) td:first-child,
         .decisions-table tbody tr:nth-child(4) td:first-child {
-            background-color: #FF69B4;
+            background-color: #FFB3D9;
             color: #000000;
             font-weight: 900;
         }
@@ -639,10 +639,10 @@
         }
 
         .future-box {
-            background-color: #FFFF00;
+            background-color: #F7E74F;
             border: 12px solid #000000;
             padding: 64px;
-            box-shadow: 20px 20px 0 #FF69B4;
+            box-shadow: 20px 20px 0 #FFB3D9;
         }
 
         .future-box h2 {
@@ -672,11 +672,11 @@
         }
 
         .future-item:nth-child(3) {
-            box-shadow: 10px 10px 0 #FF69B4;
+            box-shadow: 10px 10px 0 #FFB3D9;
         }
 
         .future-item:nth-child(4) {
-            box-shadow: 10px 10px 0 #FF69B4;
+            box-shadow: 10px 10px 0 #FFB3D9;
         }
 
         .future-item h4 {
@@ -684,7 +684,7 @@
             font-size: 22px;
             margin-bottom: 16px;
             font-weight: 900;
-            background-color: #FFFF00;
+            background-color: #F7E74F;
             display: inline-block;
             padding: 8px 16px;
             border: 4px solid #000000;
@@ -703,13 +703,13 @@
         .conclusion-box {
             background-color: #000000;
             color: #FFFFFF;
-            border: 12px solid #FFFF00;
+            border: 12px solid #F7E74F;
             padding: 64px;
             box-shadow: 20px 20px 0 #00FFB3;
         }
 
         .conclusion-box h2 {
-            color: #FFFF00;
+            color: #F7E74F;
             text-align: center;
             margin-bottom: 48px;
             font-size: 64px;
@@ -728,7 +728,7 @@
             font-style: italic;
             font-size: 18px;
             margin-top: 48px;
-            color: #FFFF00;
+            color: #F7E74F;
             font-weight: 900;
         }
 
