--- a/site/designers.html
+++ b/site/designers.html
@@ -291,7 +291,7 @@
         .designer-card {
             border: 10px solid #000000;
             background-color: #FFFFFF;
-            box-shadow: 16px 16px 0 #FF69B4;
+            box-shadow: 16px 16px 0 #FFB3D9;
         }
 
         .designer-card:nth-child(2) {
@@ -303,11 +303,11 @@
         }
 
         .designer-card:nth-child(4) {
-            box-shadow: 16px 16px 0 #FFFF00;
+            box-shadow: 16px 16px 0 #F7E74F;
         }
 
         .designer-card:nth-child(5) {
-            box-shadow: 16px 16px 0 #FF69B4;
+            box-shadow: 16px 16px 0 #FFB3D9;
         }
 
         .designer-card:nth-child(6) {
@@ -319,12 +319,12 @@
         }
 
         .designer-card-alt {
-            background-color: #FF69B4;
+            background-color: #FFB3D9;
             color: #000000;
         }
 
         .designer-header {
-            background-color: #FFFF00;
+            background-color: #F7E74F;
             color: #000000;
             padding: 32px 48px;
             border-bottom: 8px solid #000000;
@@ -340,7 +340,7 @@
         }
 
         .designer-card:nth-child(5) .designer-header {
-            background-color: #FF69B4;
+            background-color: #FFB3D9;
             color: #000000;
         }
 
@@ -383,11 +383,11 @@
             font-size: 28px;
             margin-bottom: 20px;
             color: #000000;
-            background-color: #FFFF00;
+            background-color: #F7E74F;
             display: inline-block;
             padding: 12px 24px;
             border: 5px solid #000000;
-            box-shadow: 6px 6px 0 #FF69B4;
+            box-shadow: 6px 6px 0 #FFB3D9;
         }
 
         .designer-card-alt .designer-bio h3 {
@@ -413,7 +413,7 @@
         .designer-works h4 {
             font-size: 22px;
             margin-bottom: 16px;
-            border-bottom: 4px solid #FF69B4;
+            border-bottom: 4px solid #FFB3D9;
             padding-bottom: 8px;
         }
 
@@ -425,10 +425,10 @@
         .designer-works li {
             padding: 12px 16px;
             padding-left: 32px;
-            border-left: 8px solid #FFFF00;
+            border-left: 8px solid #F7E74F;
             margin-bottom: 12px;
             font-size: 16px;
-            background-color: #FFFF00;
+            background-color: #F7E74F;
             color: #000000;
         }
 
@@ -470,7 +470,7 @@
             background-color: #00FFB3;
             border: 12px solid #000000;
             padding: 64px;
-            box-shadow: 20px 20px 0 #FFFF00;
+            box-shadow: 20px 20px 0 #F7E74F;
         }
 
         .connections-box h2 {
@@ -491,11 +491,11 @@
             background-color: #FFFFFF;
             border: 6px solid #000000;
             padding: 32px;
-            box-shadow: 10px 10px 0 #FF69B4;
+            box-shadow: 10px 10px 0 #FFB3D9;
         }
 
         .thread-item:nth-child(2) {
-            box-shadow: 10px 10px 0 #FFFF00;
+            box-shadow: 10px 10px 0 #F7E74F;
         }
 
         .thread-item:nth-child(3) {
@@ -510,7 +510,7 @@
             color: #000000;
             font-size: 28px;
             margin-bottom: 16px;
-            border-bottom: 4px solid #FF69B4;
+            border-bottom: 4px solid #FFB3D9;
             padding-bottom: 12px;
         }
 
@@ -531,7 +531,7 @@
             }
 
             .designer-card {
-                box-shadow: 10px 10px 0 #FF69B4;
+                box-shadow: 10px 10px 0 #FFB3D9;
             }
 
             .designer-header {
@@ -548,7 +548,7 @@
 
             .connections-box {
                 padding: 32px;
-                box-shadow: 12px 12px 0 #FFFF00;
+                box-shadow: 12px 12px 0 #F7E74F;
             }
 
             .connections-box h2 {
