--- a/site/history.html
+++ b/site/history.html
@@ -234,7 +234,7 @@
         .timeline-era {
             border: 10px solid #000000;
             background-color: #FFFFFF;
-            box-shadow: 16px 16px 0 #FF69B4;
+            box-shadow: 16px 16px 0 #FFB3D9;
         }
 
         .timeline-era:nth-child(2) {
@@ -246,20 +246,20 @@
         }
 
         .timeline-era:nth-child(4) {
-            box-shadow: 16px 16px 0 #FFFF00;
+            box-shadow: 16px 16px 0 #F7E74F;
         }
 
         .timeline-era:nth-child(5) {
-            box-shadow: 16px 16px 0 #FF69B4;
+            box-shadow: 16px 16px 0 #FFB3D9;
         }
 
         .timeline-era-alt {
-            background-color: #FF69B4;
+            background-color: #FFB3D9;
             color: #000000;
         }
 
         .era-header {
-            background-color: #FFFF00;
+            background-color: #F7E74F;
             color: #000000;
             padding: 32px 48px;
             border-bottom: 8px solid #000000;
@@ -281,7 +281,7 @@
         }
 
         .timeline-era:nth-child(5) .era-header {
-            background-color: #FF69B4;
+            background-color: #FFB3D9;
             color: #000000;
         }
 
@@ -298,7 +298,7 @@
             background-color: #000000;
             color: #FFFFFF;
             border: 4px solid #000000;
-            box-shadow: 4px 4px 0 #FF69B4;
+            box-shadow: 4px 4px 0 #FFB3D9;
         }
 
         .era-content {
@@ -323,12 +323,12 @@
 
         .timeline-event h3 {
             color: #000000;
-            background-color: #FFFF00;
+            background-color: #F7E74F;
             display: inline-block;
             padding: 12px 24px;
             margin-bottom: 16px;
             border: 5px solid #000000;
-            box-shadow: 6px 6px 0 #FF69B4;
+            box-shadow: 6px 6px 0 #FFB3D9;
             font-size: 32px;
         }
 
@@ -360,7 +360,7 @@
             background-color: #00FFB3;
             border: 12px solid #000000;
             padding: 64px;
-            box-shadow: 20px 20px 0 #FFFF00;
+            box-shadow: 20px 20px 0 #F7E74F;
         }
 
         .philosophy-box h2 {
@@ -381,11 +381,11 @@
             background-color: #FFFFFF;
             border: 6px solid #000000;
             padding: 32px;
-            box-shadow: 10px 10px 0 #FF69B4;
+            box-shadow: 10px 10px 0 #FFB3D9;
         }
 
         .principle-item:nth-child(2) {
-            box-shadow: 10px 10px 0 #FFFF00;
+            box-shadow: 10px 10px 0 #F7E74F;
         }
 
         .principle-item:nth-child(3) {
@@ -400,7 +400,7 @@
             color: #000000;
             font-size: 24px;
             margin-bottom: 24px;
-            border-bottom: 4px solid #FF69B4;
+            border-bottom: 4px solid #FFB3D9;
             padding-bottom: 12px;
         }
 
@@ -421,7 +421,7 @@
             }
 
             .timeline-era {
-                box-shadow: 10px 10px 0 #FF69B4;
+                box-shadow: 10px 10px 0 #FFB3D9;
             }
 
             .era-header {
@@ -449,7 +449,7 @@
 
             .philosophy-box {
                 padding: 32px;
-                box-shadow: 12px 12px 0 #FFFF00;
+                box-shadow: 12px 12px 0 #F7E74F;
             }
 
             .philosophy-box h2 {
