--- a/site/about.html
+++ b/site/about.html
@@ -576,8 +576,8 @@
         }
 
         .char-dont {
-            background-color: #FFB3D9;
-            color: #FFFFFF;
+            background-color: #FFFFFF;
+            color: #000000;
             box-shadow: 10px 10px 0 #000000;
         }
 
@@ -594,8 +594,8 @@
         }
 
         .char-dont h4 {
-            color: #FFFFFF;
-            border-bottom-color: #FFFFFF;
+            color: #000000;
+            border-bottom-color: #000000;
         }
 
         .char-do ul, .char-dont ul {
@@ -613,8 +613,8 @@
         }
 
         .char-dont li {
-            border-left-color: #FFFFFF;
-            background-color: #E0E0E0;
+            border-left-color: #000000;
+            background-color: transparent;
         }
 
         .comparison-section {
