--- a/site/designers.html
+++ b/site/designers.html
@@ -435,11 +435,13 @@
         .designer-card:nth-child(2) .designer-works li {
             border-left-color: #00FFB3;
             background-color: transparent;
+            color: #000000;
         }
 
         .designer-card:nth-child(3) .designer-works li {
             border-left-color: #00FFB3;
             background-color: transparent;
+            color: #000000;
         }
 
         .designer-card-alt .designer-works li {
