Fix: Change timeline alt section text from white to black for better contrast

--- a/history.html
+++ b/history.html
@@ -349,7 +349,7 @@
         }
 
         .timeline-era-alt .timeline-event p {
-            color: #FFFFFF;
+            color: #000000;
         }
 
         .philosophy-section {
