--- a/site/history.html
+++ b/site/history.html
@@ -349,7 +349,7 @@
         }
 
         .timeline-era-alt .timeline-event p {
-            color: #FFFFFF;
+            color: #000000;
         }
 
         .philosophy-section {
