--- a/site/history.html
+++ b/site/history.html
@@ -254,8 +254,9 @@
         }
 
         .timeline-era-alt {
-            background-color: #FFB3D9;
+            background-color: #FFFFFF;
             color: #000000;
+            border-left: 12px solid #FFB3D9;
         }
 
         .era-header {
