--- a/collaboration.html
+++ b/collaboration.html
@@ -364,8 +364,9 @@
         }
 
         .phase-alt {
-            background-color: #FFB3D9;
+            background-color: #FFFFFF;
             color: #000000;
+            border-left: 12px solid #FFB3D9;
         }
 
         .phase-header {
