--- a/designers.html
+++ b/designers.html
@@ -319,8 +319,9 @@
         }
 
         .designer-card-alt {
-            background-color: #FFB3D9;
+            background-color: #FFFFFF;
             color: #000000;
+            border-left: 12px solid #FFB3D9;
         }
 
         .designer-header {
