--- a/site/about.html
+++ b/site/about.html
@@ -419,12 +419,13 @@
 
     <style>
         .philosophy-container {
-            background-color: #FFB3D9;
+            background-color: #FFFFFF;
             padding: 80px 48px;
             margin-left: -48px;
             margin-right: -48px;
             border-top: 12px solid #000000;
             border-bottom: 12px solid #000000;
+            border-left: 12px solid #FFB3D9;
             box-shadow: 0 16px 0 #F7E74F;
         }
 
